# ssb-fame-to-python

./: .cookiecutter.json  .cruft.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  noxfile.py  pyproject.toml  sonar-project.properties
.github/workflows/: tests.yml
docs/: conf.py  index.md  reference.md
fame_to_python/: fame_to_python.py  flatfil.pro
fython/: __init__.py  fame_to_python.py  flatfil.pc
src/fython/: __init__.py  __main__.py  fame_to_python.py  flatfil.pro
tests/: __init__.py  test_fame_to_python.py  test_functions.py  test_main.py
