[tool.poetry]
name = "ssb-fame-to-python"
version = "1.0.0"
description = "Python function to write Fame data to pandas DataFrame"
authors = ["Magnus Helliesen <mkh@ssb.no>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fame_to_python", from = "fame_to_python"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
dapla-toolbelt = ">=1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.1.3"
ipykernel = ">=6.15.3"



[[tool.poetry.source]]
name = "nexus"
url = "http://pl-nexuspro-p.ssb.no:8081/repository/pypi-proxy/simple"
priority = "default"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
